chore: Add plant uml and update documentation of config update

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ sphinxcontrib-traceability
 sphinxcontrib-sadisplay
 sphinxcontrib-actdiag
 sphinxcontrib-aafig
+sphinxcontrib-plantuml
 sphinx-rtd-theme
 aafigure
 actdiag
